src/components/BentoMenu/BentoMenu.module.scss
.container {
	--size: 20vw;
	display: grid;
	grid-template-columns: repeat(5, var(--size)); // 5 columns
	grid-template-rows: calc(var(--size) * 3) calc(var(--size) * 2); // 2 rows
	gap: 1rem;

	.link {
		display: block;
		width: 100%;
		height: 100%;
		position: relative; // Required for positioning <h2>
		overflow: hidden;
		background-position: center;
		background-size: cover;

		h2 {
			position: absolute;
			bottom: 1rem; // Adjust for spacing
			left: 1rem;
			color: limegreen;
			font-weight: 800;
		}
	}

	/* Grid positioning rules */
	.link:nth-of-type(1) {
		grid-column: 1 / span 3; // Image 1 spans 3/5 columns
		grid-row: 1 / span 1; // Positioned in the first row
	}

	.link:nth-of-type(2) {
		grid-column: 4 / span 2; // Image 2 spans the remaining 2/5 columns
		grid-row: 1 / span 1; // Positioned in the first row
	}

	.link:nth-of-type(3) {
		grid-column: 1 / span 2; // Image 3 spans 2/5 columns
		grid-row: 2 / span 1; // Positioned in the second row
	}

	.link:nth-of-type(4) {
		grid-column: 3 / span 3; // Image 4 spans 3/5 columns
		grid-row: 2 / span 1; // Positioned in the second row
	}
}

